<resources>
    <string name="app_name">Vibhor Portfolio App</string>
    <string name="text_title_app_popular_movies">Popular Movies</string>
    <string name="text_title_app_stock_hawk">Stock Hawk</string>
    <string name="text_title_app_build_it_bigger">Build it Bigger</string>
    <string name="text_title_app_make_material">Make Your App Material</string>
    <string name="text_title_app_go_ubiquitous">Go Ubiquitous</string>
    <string name="text_title_app_capstone">Capstone</string>

    <string name="text_title_label">My Nanodegree Apps!</string>
    <string name="text_toast_description">This button will launch %1$s app!</string>
</resources>
